# gen-ai-software-engineering

homework-4/: HOWTORUN.md  HW_EXECUTION_SPEC.md  README.md  pyproject.toml  requirements.txt  run-pipeline.sh
homework-4/agents/: bug-fixer.agent.md  research-verifier.agent.md  security-verifier.agent.md  unit-test-generator.agent.md
homework-4/artifacts/: pipeline-execution-output.txt  pytest-results-output.txt  security-findings-summary.txt
homework-4/context/bugs/001-date-filter-off-by-one/: bug-context.md  fix-summary.md  implementation-plan.md  security-report.md  test-report.md
homework-4/context/bugs/001-date-filter-off-by-one/research/: codebase-research.md  verified-research.md
homework-4/context/bugs/002-incorrect-average/: bug-context.md  fix-summary.md  implementation-plan.md  security-report.md  test-report.md
homework-4/context/bugs/002-incorrect-average/research/: codebase-research.md  verified-research.md
homework-4/context/bugs/003-missing-delete-validation/: bug-context.md  fix-summary.md  implementation-plan.md  security-report.md  test-report.md
homework-4/context/bugs/003-missing-delete-validation/research/: codebase-research.md  (+1 more)
homework-4/docs/: IMPLEMENTATION_ROADMAP.md  claude_cli_analysis.md  repository-analysis.md  requirements_breakdown.md  submission_audit.md
homework-4/docs/project-memory/: CURRENT_STATE.md
homework-4/skills/: research-quality-measurement.md  unit-tests-FIRST.md
homework-4/src/: main.py  models.py  storage.py  utils.py
homework-4/tests/: test_basic.py  test_bug_001.py  test_bug_002.py  test_bug_003.py
(+70 files in other folders)
