[project]
name = "hw4-expense-tracker"
version = "0.1.0"
description = "HW4: 4-Agent Pipeline — Expense Tracker mini app"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0
